--- a/angular.json
+++ b/angular.json
@@ -120,7 +120,8 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "TypoX:serve"
+            "devServerTarget": "TypoX:serve",
+            "port": 4201
           },
           "configurations": {
             "production": {
