--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "firebase": "^6.0.4",
     "ngx-bootstrap": "^4.3.0",
+    "ngx-mathjax": "0.0.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
